# autograder2

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  add_submissions.py  docker-compose.yml  entrypoint.sh  filler_data.py  manage.py  pyproject.toml  requirements.txt  run.sh
.github/workflows/: codacy-analysis.yaml  deploy.yml
autograder/: .env.example  asgi.py  celery.py  context_processors.py  requirements.txt  settings.py  urls.py  wsgi.py
autograder/api/: README.md  contest_api.py  contest_serializers.py  contest_views.py  problem_detail_api.py  problem_list_api.py  rankings_api.py  root.py  serializers.py  submission_list_api.py  urls.py
autograder/coderunner/: default_checker.py  files.py  handlers.py  runner.py
autograder/static/: admin.css  (+2 more)
autograder2/: pyproject.toml
autograder2/autograder/apps/contests/: admin.py
autograder2/autograder/apps/contests/templatetags/: charat.py
autograder2/autograder/apps/index/: models.py
autograder2/autograder/apps/index/migrations/: 0005_graderuser_author_drops.py  0007_graderuser_rank.py  0008_remove_graderuser_rank.py
autograder2/autograder/apps/oauth/: backend.py  urls.py
autograder2/autograder/apps/problems/migrations/: 0008_remove_problem_testcase_zip_problem_testcases_zip.py
autograder2/autograder/apps/rankings/: utils.py
autograder2/autograder/apps/rankings/migrations/: 0001_initial.py
autograder2/autograder/apps/runtests/: tasks.py
autograder2/autograder/coderunner/: handlers.py  runner.py
autograder2/autograder/templates/contest/: status.html
autograder2/autograder/templates/index/: user_profile.html
autograder2/autograder/templates/partials/: contestNavbar.html
config/: Dockerfile  entrypoint.sh
dev/: Dockerfile  entrypoint.sh  example_sol.java  filler_data.py  spam_subs.py
frontend/: .gitignore  Dockerfile  README.md  package-lock.json  package.json  svelte.config.js  tailwind.config.js  vite.config.ts
scripts/: entrypoint.sh
(+178 files in other folders)
